# scratchbook

./: .gitignore  CMakeLists.txt  main.cpp
art/: Art.h  Node4.h
cmake/: defaultBuildType.cmake  dlGtest.cmake  downloadBoost.cmake  downloadCpr.cmake  downloadFmt.cmake  downloadGSL.cmake  downloadGflags.cmake  downloadGtest.cmake  downloadProtobuf.cmake  downloadRange-v3.cmake  downloadRapidJSON.cmake  downloadTypeSafe.cmake  externalProjectBoost.txt.in  externalProjectCpr.txt.in  externalProjectFmt.txt.in  externalProjectGSL.txt.in  externalProjectGflags.txt.in  externalProjectGtest.txt.in  externalProjectProtobuf.txt.in  externalProjectRange-v3.txt.in  externalProjectRapidJSON.txt.in  externalProjectType_safe.txt.in  sanitizers.cmake  utils.cmake  warnings.cmake
includeosClient/: CMakeLists.txt  client.cpp
includeosServer/: CMakeLists.txt  server.cpp
src/: main.cpp
src/art/: Art.h  Node16.h  Node4.h  Node48.h
src/test/: taggedPtrTest.cpp
src/util/: acl.h  assert_that.h  lambda.h  lazy.h  tagged_unique_ptr.h
