cmake_minimum_required(VERSION 3.12)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

include(defaultBuildType)
cmake_set_default_build_type()

project(scratchbook)

include(utils)
include(downloadGtest)
include(downloadGSL)
include(downloadFmt)
include(downloadRapidJSON)
include(downloadBoost)
include(downloadGflags)
include(downloadRange-v3)

add_executable_with_warnings(scratchbook main.cpp art/Art.h art/Node4.h art/Node16.h art/Node48.h)
target_link_libraries_dont_warn(scratchbook GSL)
target_link_libraries_dont_warn(scratchbook gtest)
target_link_libraries_dont_warn(scratchbook fmt)
target_link_libraries_dont_warn(scratchbook RapidJSON)
target_link_libraries_dont_warn(scratchbook gflags)
target_link_libraries_dont_warn(scratchbook range-v3)
target_link_libraries(scratchbook Boost::filesystem)
